# TFCCalculator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  eslint.config.mjs  jest.config.ts  next.config.mjs  package.json  pnpm-lock.yaml  shell.nix  sonar-project.properties  tsconfig.json
.github/: README.md
.github/workflows/: run-tests.yml  rust-ci.yml
crates/data/: Cargo.toml
crates/data/data/: gameversions.json
crates/data/data/modpack/terrafirmagreg/1.20.x_0.10.5/: minerals.json  outputs.json
crates/data/src/: game_data.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/types/: Cargo.toml
crates/types/src/: calculation.rs  filters.rs  lib.rs  smelting.rs  versions.rs
crates/types/tests/fixtures/: gameversions.json
public/: sitemap-0.xml
src/: instrumentation.ts
src/app/: layout.tsx  not-found.tsx
src/components/: HeadingWithBackButton.tsx  MetalComponentDisplay.tsx  OutputResult.tsx  Tooltip.tsx
src/functions/: algorithm.ts
src/functions/errorPage/: index.ts
src/lib/: logger.ts
src/services/calculation/: CalculationService.ts  ChunkingService.ts  CombinatorialSearchService.ts  ComponentPlanService.ts  ConstraintChecker.ts  DPService.ts  InputNormalizationService.ts  OutputCalculator.ts  OutputResolutionStrategyExecutor.ts  StrategySelector.ts  (+2 more)
src/types/: gameversions.ts
test/: algorithm.newFeature.spec.ts  dp-test-utils.ts  helpers.ts
test/fixtures/: availableMineralFixture.ts  mineralFixture.ts  mineralUseCaseFixture.ts  smeltingComponentFixture.ts
test/helpers/: availableMineralBuilder.ts  reusableFixtureData.ts
(+36 files in other folders)
