[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/supermarcel10/TFCCalculator"
description = "TerraFirmaCraft metal/alloy calculator"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rust-embed = "8"
rstest = "0"
