[package]
name = "tfc-data"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
tfc-types = { path = "../types" }
serde.workspace = true
serde_json.workspace = true
rust-embed.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
